# alpaca

./: .env.example  .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  LOVABLE_INTEGRATION.md  MIGRATION_PLAN.md  QUICKSTART.md  README.md  STATUS.md  SUPABASE_SETUP.md  alpaca.code-workspace  database.py  main.py  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt  schema_chunks.sql  schema_documents.sql  schema_file_state.sql  settings.py  start.sh  test_pdf_parser.py  test_refactored_parser.py  test_refactored_txt_parser.py  worker.py  workflows_export_n8n.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
alpaca/application/: __init__.py
app/: __init__.py
app/api/: __init__.py
app/chunkers/: custom_chunker.py
app/core/: chunker.py  embedder.py  file_watcher.py  parser.py  rag.py
app/db/: connection.py  models.py
app/document-processors/: Dockerfile  requirements.txt
app/embedders/: custom_embedder.py
app/file_watcher/: Dockerfile  FILTERING.md  __init__.py  database.py  main.py  run_tests.sh  service.py  vector_sync.py
app/flows/: __init__.py
app/parsers/: base_parser.py  document_converter.py  pdf_parser_optimized.py
app/utils/: logging.py  process_lock.py
app/workers/: file_processor.py  scheduler.py
art/favicon/: site.webmanifest
art/photoshop/: ico-alpaca.psd  logo_dark_alpaca.psd  logo_white_alpaca.psd
core/application/: __init__.py  bootstrap.py
core/domain/: __init__.py
core/infrastructure/: README.md
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  ARCHITECTURE_SIMPLE.md  DEPLOYMENT.md  DEV_SETUP.md  HOW_TO_ADD_CLEANER.md  INGEST_ISOLATION_PLAN.md  LOVABLE_INTEGRATION.md  LOVABLE_PROMPT.md  SETTINGS_ARCHITECTURE.md  TESTING_AUTO_RUN.md  TODO.md  architecture_overview.md  architecture_roadmap.md
docs/lovable/: LOVABLE_ADMIN_PROMPT.md  LOVABLE_KNOWLEDGE.md  LOVABLE_STREAMING_INTEGRATION.md
scripts/: alpaca.service  alpaca.sh  build_filewatcher.sh  check_system.sh  clear_monitored_folder.sh  copy_documents.sh  deploy_flows.py  init_models.sh  setup_dev.sh  setup_supabase.sh  start_prefect.sh  start_prefect_worker.sh  start_services.sh  stop_services.sh  команды  команды.md
scripts/ports/: check_ports.sh  restart_supabase_ui.sh  setup_ssh_tunnels.sh  (+1 more)
services/: .env.example  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml
systemd/: WORKER_SETUP.md  alpaca-worker.service
temp_parsed/: Задание от 07.10.25 номер 4.pdf.txt
tests/: README.md  __init__.py  conftest.py  pytest.ini  runner.py  test_chunk_manager_cleanup.py  test_chunker.py  test_cleaner.py  test_embedder.py  test_metaextractor.py  test_ollama_readiness.py  test_parser.py  test_smart_chunker.py  test_worker_concurrency.py  test_worker_integration.py  test_worker_pipeline.py
utils/: __init__.py  chunk_manager.py  file_manager.py  logging.py  process_lock.py  worker.py
(+370 files in other folders)
